Updated the buildscript to automatically upload to Curse - And the actual command for Travis to execute!

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install: ./gradlew setupCIWorkspace -S
 script: ./gradlew build -i -S
 after_success:
   - ./gradlew uploadJars -S
+  - ./gradlew curse -S
   - ./gradlew createGithubBranches -S
